--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "dev": "npx tailwindcss -i ./styles/style.css -o ./styles/output.css --watch & npx update-browserslist-db@latest"
   },
   "devDependencies": {
-    "tailwindcss": "^3.3.3"
+    "tailwindcss": "^3.3.3",
+    "webpack": "^5.88.2",
+    "webpack-cli": "^5.1.4"
   },
   "dependencies": {
     "caniuse-lite": "^1.0.30001547"
